[package]
name = "extinguish_common"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["alloc", "derive", "serde"] }
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
wamr-rust-sdk = { git = "https://github.com/bytecodealliance/wamr-rust-sdk" }

[dev-dependencies]
serde_json = "1"