[package]
name = "pervade_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
oxc = { version = "0.48", features = ["transformer", "minifier", "semantic", "codegen", "serialize"] }
oxc_index = { version = "2", features = ["serde"] }
oxc_resolver = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
string_wizard = "0.0"
thiserror = "2"
tokio = { version = "1", features = ["fs", "macros", "rt", "rt-multi-thread", "sync"] }
vfs = "0.12"
walrus = "0.23"
wasm-opt = "0.116"
