[package]
name = "pervade_compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2"
oxc = { version = "0.48", features = ["full"] }
oxc_index = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "macros", "rt", "rt-multi-thread", "sync"] }